# voxels

./: .clangd  .gitignore  build.bat  build_debug.bat  build_debug.sh  build_release.bat  build_release.sh  meson.build
src/: debug.cpp  debug.hpp  main.cpp  octree.cpp  octree.hpp
src/shaders/: shader.glsl.frag  shader.glsl.vert
